# ETL-pipeline-with-Python

./: Readme.rst  main.py  pyproject.toml
